--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_sucursal
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/db_sucursal
+spring.datasource.username=user_dev1
+spring.datasource.password=leSOed@72
